istio/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: basic_routes
            virtual_hosts:
            - name: google
              domains: ["*"]
              routes:
              - match:
                  prefix: "/google"
                route:
                  host_rewrite: www.google.com
                  cluster: service_google
                  prefix_rewrite: "/"
              - match:
                  prefix: "/devopsmasters"
                route:
                  host_rewrite: devopsmasters.eu
                  cluster: service_devopsmasters
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.router
  clusters:
  - name: service_google
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_google
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
        sni: www.google.com
  - name: service_devopsmasters
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_devopsmasters
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: devopsmasters.eu
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
#      typed_config:
#        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
#        sni: www.google.com
